--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -36,13 +36,15 @@
 				| {% else %}
 				span#item-title.item-title {{ node.name }}
 				| {% endif %}
-				ul
+				ul.text-secondary
+					//- TODO: Make tags clickeable.
 					| {% if node.properties.tags %}
 					li#item-tags
 						| {% for tag in node.properties.tags %}
 						| {{ tag }}{{ ", " if not loop.last }}
 						| {% endfor %}
 					| {% endif %}
+
 					//- Add POST_ADDITIONAL_PROPERTIES filters here
 					| {% for k, v in config['POST_ADDITIONAL_PROPERTIES'].items() %}
 					//- If the dillo_post dyn_schema in this project supports this
@@ -55,7 +57,8 @@
 					| {% endfor %}
 
 					li
-						a.item-date(
+						a.text-secondary(
+							class="js-convert-date",
 							title="{{ node._created }}",
 							href="{{ url_for('posts.view', community_url=project.url, post_shortcode=node.properties.shortcode, _external=True) }}")
 							| {{ node._created | pretty_date }}
@@ -201,7 +204,7 @@ script.
 
 	// Parse emojis (very important! :) and date with momentjs (so it gets translations)
 	$('#item-title').html(twemoji.parse('{{ node.name }}'));
-	$('a.item-date').text(moment('{{ node._created }}').fromNow());
+	$('.js-convert-date').text(moment('{{ node._created }}').fromNow());
 
 	{% if is_link %}
 		$('#item-link-url').text(shortenUrl('{{ node.properties.content }}'));
