--- a/src/styles/main_dark.sass
+++ b/src/styles/main_dark.sass
@@ -85,12 +85,4 @@ $dropdown-bg: $color-background
 @import '../../../pillar/src/styles/plugins/_js_select2'
 
 // Dillo's own styles.
-@import _base
-@import _item
-@import _list
-@import _user
-@import _error
-
-@import _input_select
-
-@import _settings_base
+@import dillo_components
